--- a/css/estilos.css
+++ b/css/estilos.css
@@ -119,4 +119,11 @@ table {
   font-size: 50px;
 }
 
+/* line 106, ../../../../wamp64/www/COVID/sass/estilos.scss */
+.cuerpo {
+  background-color: #383639;
+  width: all;
+  height: all;
+}
+
 /*# sourceMappingURL=estilos.css.map */
