--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,11 +1,11 @@
 @import url("https://fonts.googleapis.com/css?family=Anton&display=swap");
 @import url("https://fonts.googleapis.com/css?family=Archivo+Black&display=swap");
-/* line 4, ../../../../wamp64/www/COVID/sass/estilos.scss */
+/* line 4, ../../../../wamp64/www/COVID/Covid-19/sass/estilos.scss */
 * {
   margin: 0;
 }
 
-/* line 8, ../../../../wamp64/www/COVID/sass/estilos.scss */
+/* line 8, ../../../../wamp64/www/COVID/Covid-19/sass/estilos.scss */
 .principal {
   background-color: #383639;
   color: blanchedalmond;
@@ -13,12 +13,12 @@
   padding-bottom: 10px;
 }
 
-/* line 14, ../../../../wamp64/www/COVID/sass/estilos.scss */
+/* line 14, ../../../../wamp64/www/COVID/Covid-19/sass/estilos.scss */
 table {
   background-color: white;
 }
 
-/* line 17, ../../../../wamp64/www/COVID/sass/estilos.scss */
+/* line 17, ../../../../wamp64/www/COVID/Covid-19/sass/estilos.scss */
 .total {
   height: auto;
   width: all;
@@ -29,30 +29,34 @@ table {
   background-color: #383639;
 }
 
-/* line 28, ../../../../wamp64/www/COVID/sass/estilos.scss */
+/* line 28, ../../../../wamp64/www/COVID/Covid-19/sass/estilos.scss */
 .principal .barra_principal {
   width: 70%;
   margin: auto;
 }
 
-/* line 32, ../../../../wamp64/www/COVID/sass/estilos.scss */
+/* line 32, ../../../../wamp64/www/COVID/Covid-19/sass/estilos.scss */
 .principal .pais {
   padding-right: 215px;
 }
 
-/* line 35, ../../../../wamp64/www/COVID/sass/estilos.scss */
+/* line 35, ../../../../wamp64/www/COVID/Covid-19/sass/estilos.scss */
 .principal h2 {
   text-align: center;
 }
 
 @media (max-width: 500px) {
-  /* line 40, ../../../../wamp64/www/COVID/sass/estilos.scss */
+  /* line 40, ../../../../wamp64/www/COVID/Covid-19/sass/estilos.scss */
   .pais {
     padding-right: 10px;
   }
+  /* line 43, ../../../../wamp64/www/COVID/Covid-19/sass/estilos.scss */
+  .resultados {
+    height: 1000px;
+  }
 }
 
-/* line 44, ../../../../wamp64/www/COVID/sass/estilos.scss */
+/* line 47, ../../../../wamp64/www/COVID/Covid-19/sass/estilos.scss */
 .resultados {
   background-color: #383639;
   width: 70%;
@@ -62,12 +66,12 @@ table {
   overflow-x: hidden;
 }
 
-/* line 52, ../../../../wamp64/www/COVID/sass/estilos.scss */
+/* line 55, ../../../../wamp64/www/COVID/Covid-19/sass/estilos.scss */
 .resultados tr:hover {
   background-color: #817f83;
 }
 
-/* line 58, ../../../../wamp64/www/COVID/sass/estilos.scss */
+/* line 61, ../../../../wamp64/www/COVID/Covid-19/sass/estilos.scss */
 .footer {
   background-color: #383639;
   color: blanchedalmond;
@@ -78,48 +82,48 @@ table {
   font-size: 25px;
 }
 
-/* line 66, ../../../../wamp64/www/COVID/sass/estilos.scss */
+/* line 69, ../../../../wamp64/www/COVID/Covid-19/sass/estilos.scss */
 .footer .api {
   font-size: 15px;
 }
 
-/* line 70, ../../../../wamp64/www/COVID/sass/estilos.scss */
+/* line 73, ../../../../wamp64/www/COVID/Covid-19/sass/estilos.scss */
 .navbar-brand, .navbar {
   font-family: 'Anton', sans-serif;
   font-size: 20px;
 }
 
-/* line 77, ../../../../wamp64/www/COVID/sass/estilos.scss */
+/* line 80, ../../../../wamp64/www/COVID/Covid-19/sass/estilos.scss */
 .infectados p {
   color: yellow;
   font-size: 50px;
 }
 
-/* line 83, ../../../../wamp64/www/COVID/sass/estilos.scss */
+/* line 86, ../../../../wamp64/www/COVID/Covid-19/sass/estilos.scss */
 .muertos p {
   color: red;
   font-size: 50px;
 }
 
-/* line 89, ../../../../wamp64/www/COVID/sass/estilos.scss */
+/* line 92, ../../../../wamp64/www/COVID/Covid-19/sass/estilos.scss */
 .recuperados p {
   color: green;
   font-size: 50px;
 }
 
-/* line 95, ../../../../wamp64/www/COVID/sass/estilos.scss */
+/* line 98, ../../../../wamp64/www/COVID/Covid-19/sass/estilos.scss */
 .nuevos p {
   color: blue;
   font-size: 50px;
 }
 
-/* line 101, ../../../../wamp64/www/COVID/sass/estilos.scss */
+/* line 104, ../../../../wamp64/www/COVID/Covid-19/sass/estilos.scss */
 .n_muertos p {
   color: orangered;
   font-size: 50px;
 }
 
-/* line 106, ../../../../wamp64/www/COVID/sass/estilos.scss */
+/* line 109, ../../../../wamp64/www/COVID/Covid-19/sass/estilos.scss */
 .cuerpo {
   background-color: #383639;
   width: all;
