--- a/sass/estilos.scss
+++ b/sass/estilos.scss
@@ -40,6 +40,9 @@ table{
     .pais{
         padding-right: 10px;
     }
+    .resultados{
+        height: 1000px;
+    }
 }
 .resultados{
     background-color: #383639;
