--- a/sass/estilos.scss
+++ b/sass/estilos.scss
@@ -36,7 +36,7 @@ table{
         text-align: center;
     }
 }
-@media(max-width:500px){
+@media(min-width:500px){
     .pais{
         padding-right: 10px;
     }
