--- a/sass/estilos.scss
+++ b/sass/estilos.scss
@@ -41,7 +41,7 @@ table{
         padding-right: 10px;
     }
     .resultados{
-        height: 1500px;
+        height: 100vh;
     }
 }
 .resultados{
