--- a/css/estilos.css
+++ b/css/estilos.css
@@ -52,7 +52,7 @@ table {
   }
   /* line 43, ../../../../wamp64/www/COVID/Covid-19/sass/estilos.scss */
   .resultados {
-    height: 1500px;
+    height: 100vh;
   }
 }
 
