--- a/sass/estilos.scss
+++ b/sass/estilos.scss
@@ -105,7 +105,7 @@ table{
     }
 }
 .cuerpo{
-    background-color: #383639;
+    background-color: #383639 !important;
     width: all;
     height: 100vh;
 }
