--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,11 +1,11 @@
 @import url("https://fonts.googleapis.com/css?family=Anton&display=swap");
 @import url("https://fonts.googleapis.com/css?family=Archivo+Black&display=swap");
-/* line 4, ../../../../wamp64/www/COVID/Covid-19/sass/estilos.scss */
+@import url("https://fonts.googleapis.com/css?family=Pacifico&display=swap");
+@import url("https://fonts.googleapis.com/css?family=Jomolhari&display=swap");
 * {
   margin: 0;
 }
 
-/* line 9, ../../../../wamp64/www/COVID/Covid-19/sass/estilos.scss */
 .principal {
   background-color: #383639;
   color: blanchedalmond;
@@ -13,12 +13,10 @@
   padding-bottom: 10px;
 }
 
-/* line 15, ../../../../wamp64/www/COVID/Covid-19/sass/estilos.scss */
 table {
   background-color: white;
 }
 
-/* line 18, ../../../../wamp64/www/COVID/Covid-19/sass/estilos.scss */
 .total {
   height: auto;
   width: all;
@@ -29,30 +27,22 @@ table {
   background-color: #383639;
 }
 
-/* line 29, ../../../../wamp64/www/COVID/Covid-19/sass/estilos.scss */
 .principal .barra_principal {
   width: 70%;
   margin: auto;
 }
-
-/* line 33, ../../../../wamp64/www/COVID/Covid-19/sass/estilos.scss */
 .principal .pais {
   padding-right: 215px;
 }
-
-/* line 36, ../../../../wamp64/www/COVID/Covid-19/sass/estilos.scss */
 .principal h2 {
   text-align: center;
 }
 
 @media (max-width: 500px) {
-  /* line 41, ../../../../wamp64/www/COVID/Covid-19/sass/estilos.scss */
   .pais {
     padding-right: 10px;
   }
 }
-
-/* line 46, ../../../../wamp64/www/COVID/Covid-19/sass/estilos.scss */
 .resultados {
   background-color: #383639;
   width: 70%;
@@ -61,69 +51,191 @@ table {
   overflow: scroll;
   overflow-x: hidden;
 }
-
-/* line 54, ../../../../wamp64/www/COVID/Covid-19/sass/estilos.scss */
 .resultados tr:hover {
   background-color: #817f83;
 }
 
-/* line 60, ../../../../wamp64/www/COVID/Covid-19/sass/estilos.scss */
 .footer {
   background-color: #383639;
   color: blanchedalmond;
   text-align: center;
   height: auto;
   width: all;
-  font-family: 'Archivo Black', sans-serif;
+  font-family: "Archivo Black", sans-serif;
   font-size: 25px;
 }
-
-/* line 68, ../../../../wamp64/www/COVID/Covid-19/sass/estilos.scss */
 .footer .api {
   font-size: 15px;
 }
 
-/* line 72, ../../../../wamp64/www/COVID/Covid-19/sass/estilos.scss */
 .navbar-brand, .navbar {
-  font-family: 'Anton', sans-serif;
+  font-family: "Anton", sans-serif;
   font-size: 20px;
 }
 
-/* line 79, ../../../../wamp64/www/COVID/Covid-19/sass/estilos.scss */
+.infectados {
+  width: 350px;
+  height: 200px;
+  background: #F8D442;
+  border-radius: 15px;
+  padding: 20px;
+  font-size: 10px;
+  font-family: "Jomolhari", serif;
+}
 .infectados p {
-  color: yellow;
-  font-size: 50px;
+  color: black;
+  font-size: 45px;
+}
+.infectados p::after {
+  content: " ";
+  height: 50px;
+  width: 50px;
+  display: inline-block;
+  margin-left: 20px;
+  margin-bottom: -10px;
+  background: url(../img/cuarentena.png);
+  background-size: 50px;
+  background-repeat: no-repeat;
+}
+.infectados h3 {
+  color: black;
 }
 
-/* line 85, ../../../../wamp64/www/COVID/Covid-19/sass/estilos.scss */
+.muertos {
+  width: 350px;
+  height: 200px;
+  background: #F73738;
+  border-radius: 15px;
+  padding: 20px;
+  font-family: "Jomolhari", serif;
+}
 .muertos p {
-  color: red;
-  font-size: 50px;
+  color: black;
+  font-size: 45px;
+}
+.muertos p::after {
+  content: " ";
+  height: 50px;
+  width: 50px;
+  display: inline-block;
+  margin-left: 20px;
+  margin-bottom: -10px;
+  background: url(../img/triste.png);
+  background-size: 50px;
+  background-repeat: no-repeat;
+}
+.muertos h3 {
+  color: black;
 }
 
-/* line 91, ../../../../wamp64/www/COVID/Covid-19/sass/estilos.scss */
+.recuperados {
+  width: 350px;
+  height: 200px;
+  background: #73D673;
+  border-radius: 15px;
+  padding: 20px;
+  font-family: "Jomolhari", serif;
+}
 .recuperados p {
-  color: green;
-  font-size: 50px;
+  color: black;
+  font-size: 45px;
+}
+.recuperados p::after {
+  content: " ";
+  height: 50px;
+  width: 50px;
+  display: inline-block;
+  margin-left: 20px;
+  margin-bottom: -10px;
+  background: url(../img/sonreir.png);
+  background-size: 50px;
+  background-repeat: no-repeat;
+}
+.recuperados h3 {
+  color: black;
 }
 
-/* line 97, ../../../../wamp64/www/COVID/Covid-19/sass/estilos.scss */
+.nuevos {
+  width: 350px;
+  height: 200px;
+  background: #7498C4;
+  border-radius: 15px;
+  padding: 20px;
+  margin: auto;
+  margin-bottom: 15px;
+  font-family: "Jomolhari", serif;
+}
 .nuevos p {
-  color: blue;
-  font-size: 50px;
+  color: black;
+  font-size: 45px;
+}
+.nuevos p::after {
+  content: " ";
+  height: 50px;
+  width: 50px;
+  display: inline-block;
+  margin-left: 20px;
+  margin-bottom: -10px;
+  background: url(../img/mas.png);
+  background-size: 50px;
+  background-repeat: no-repeat;
+}
+.nuevos h3 {
+  color: black;
 }
 
-/* line 103, ../../../../wamp64/www/COVID/Covid-19/sass/estilos.scss */
+.n_muertos {
+  width: 350px;
+  height: 200px;
+  background: #F7A740;
+  border-radius: 15px;
+  padding: 20px;
+  margin: auto;
+  font-family: "Jomolhari", serif;
+}
 .n_muertos p {
-  color: orangered;
-  font-size: 50px;
+  color: black;
+  font-size: 45px;
+}
+.n_muertos p::after {
+  content: " ";
+  height: 50px;
+  width: 50px;
+  display: inline-block;
+  margin-left: 20px;
+  margin-bottom: -10px;
+  background: url(../img/menos.png);
+  background-size: 50px;
+  background-repeat: no-repeat;
+}
+.n_muertos h3 {
+  color: black;
 }
 
-/* line 108, ../../../../wamp64/www/COVID/Covid-19/sass/estilos.scss */
 .cuerpo {
   background-color: #383639 !important;
   width: all;
-  height: 100vh;
+  height: all;
 }
 
-/*# sourceMappingURL=estilos.css.map */
+@media (min-width: 300px) {
+  .infectados, .n_muertos, .muertos, .recuperados, .nuevos {
+    width: auto;
+    height: auto;
+    margin-bottom: 10px;
+  }
+}
+@media (max-width: 500px) {
+  .n_muertos, .nuevos {
+    padding-top: 0;
+  }
+}
+.mexico {
+  background-image: linear-gradient(to right, #73D673, white, #F73738);
+  font-weight: bold;
+  color: black;
+  border-radius: 5px;
+}
+.mexico table {
+  border-radius: 5px;
+}
