--- a/css/estilos.css
+++ b/css/estilos.css
@@ -63,6 +63,7 @@ table {
   width: all;
   font-family: "Archivo Black", sans-serif;
   font-size: 25px;
+  padding-bottom: 100px;
 }
 .footer .api {
   font-size: 15px;
