--- a/sass/estilos.scss
+++ b/sass/estilos.scss
@@ -69,6 +69,7 @@ table{
     width: all;
     font-family: 'Archivo Black', sans-serif;
     font-size: 25px;
+    padding-bottom: 100px;
     .api{
         font-size: 15px;
     }
