--- a/css/virus.css
+++ b/css/virus.css
@@ -1,18 +1,16 @@
 @import url("https://fonts.googleapis.com/css?family=Anton&display=swap");
 @import url("https://fonts.googleapis.com/css?family=Archivo+Black&display=swap");
-/* line 5, ../../../../wamp64/www/COVID/Covid-19/sass/virus.scss */
 .cuerpo {
   background: #383639;
   width: all;
-  height: all;
+  height: 100vh;
   text-align: center;
-  font-family: 'Archivo Black', sans-serif;
+  font-family: "Archivo Black", sans-serif;
   color: blanchedalmond;
   padding-top: 15px;
   padding-bottom: 100px;
 }
 
-/* line 15, ../../../../wamp64/www/COVID/Covid-19/sass/virus.scss */
 .textos {
   width: 70%;
   height: auto;
@@ -20,5 +18,3 @@
   margin: auto;
   padding-top: 10px;
 }
-
-/*# sourceMappingURL=virus.css.map */
