--- a/css/reco.css
+++ b/css/reco.css
@@ -1,18 +1,16 @@
 @import url("https://fonts.googleapis.com/css?family=Anton&display=swap");
 @import url("https://fonts.googleapis.com/css?family=Archivo+Black&display=swap");
-/* line 5, ../../../../wamp64/www/COVID/Covid-19/sass/reco.scss */
 .cuerpo {
   background: #383639;
   width: all;
-  height: all;
+  height: 100vh;
   text-align: center;
-  font-family: 'Archivo Black', sans-serif;
+  font-family: "Archivo Black", sans-serif;
   color: blanchedalmond;
   padding-top: 15px;
   padding-bottom: 100px;
 }
 
-/* line 16, ../../../../wamp64/www/COVID/Covid-19/sass/reco.scss */
 .recomendaciones {
   width: 70%;
   height: auto;
@@ -21,25 +19,19 @@
   padding-top: 10px;
 }
 
-/* line 24, ../../../../wamp64/www/COVID/Covid-19/sass/reco.scss */
 .img {
   border-radius: 15px;
 }
 
-/* line 27, ../../../../wamp64/www/COVID/Covid-19/sass/reco.scss */
 .footer {
   background-color: #383639;
   color: blanchedalmond;
   text-align: center;
   height: auto;
   width: all;
-  font-family: 'Archivo Black', sans-serif;
+  font-family: "Archivo Black", sans-serif;
   font-size: 25px;
 }
-
-/* line 35, ../../../../wamp64/www/COVID/Covid-19/sass/reco.scss */
 .footer .api {
   font-size: 15px;
 }
-
-/*# sourceMappingURL=reco.css.map */
