--- a/sass/reco.scss
+++ b/sass/reco.scss
@@ -5,7 +5,7 @@
 .cuerpo{
     background: #383639;
     width: all;
-    height: all;
+    height: 100vh;
     text-align: center;
     font-family: 'Archivo Black', sans-serif;
     color: blanchedalmond;
