--- a/sass/desa.scss
+++ b/sass/desa.scss
@@ -1,7 +1,9 @@
 @import url('https://fonts.googleapis.com/css?family=Anton&display=swap');
 @import url('https://fonts.googleapis.com/css?family=Archivo+Black&display=swap');
 
-
+body{
+  background-color: #383639;
+}
 .cuerpo{
     background: #383639;
     width: all;
