--- a/css/desa.css
+++ b/css/desa.css
@@ -1,27 +1,26 @@
 @import url("https://fonts.googleapis.com/css?family=Anton&display=swap");
 @import url("https://fonts.googleapis.com/css?family=Archivo+Black&display=swap");
-/* line 5, ../../../../wamp64/www/COVID/Covid-19/sass/desa.scss */
+body {
+  background-color: #383639;
+}
+
 .cuerpo {
   background: #383639;
   width: all;
   height: 100vh;
   text-align: center;
-  font-family: 'Archivo Black', sans-serif;
+  font-family: "Archivo Black", sans-serif;
   color: blanchedalmond;
   padding-top: 100px;
   padding-bottom: 100px;
 }
 
-/* line 16, ../../../../wamp64/www/COVID/Covid-19/sass/desa.scss */
 .img_conta {
   height: 35px;
   width: 35px;
   margin-right: 12px;
 }
 
-/* line 22, ../../../../wamp64/www/COVID/Covid-19/sass/desa.scss */
 .redes {
   margin-top: 150px;
 }
-
-/*# sourceMappingURL=desa.css.map */
