--- a/sass/estilos.scss
+++ b/sass/estilos.scss
@@ -9,7 +9,9 @@ $letra-tres :'Jomolhari', serif;
    margin: 0;
    
 }
-
+body{
+    background-color: #383639;
+}
 .principal{
     background-color: #383639;
     color: blanchedalmond;
