--- a/sass/reco.scss
+++ b/sass/reco.scss
@@ -1,13 +1,14 @@
 @import url('https://fonts.googleapis.com/css?family=Anton&display=swap');
 @import url('https://fonts.googleapis.com/css?family=Archivo+Black&display=swap');
+
 body{
-    background-color: #383639;
+    background: #383639;
 }
 
 .cuerpo{
     background: #383639;
     width: all;
-
+    height: 100vh;
     text-align: center;
     font-family: 'Archivo Black', sans-serif;
     color: blanchedalmond;
