--- a/css/virus.css
+++ b/css/virus.css
@@ -7,6 +7,7 @@ body {
 .cuerpo {
   background: #383639;
   width: all;
+  height: 100vh;
   text-align: center;
   font-family: "Archivo Black", sans-serif;
   color: blanchedalmond;
