--- a/sass/virus.scss
+++ b/sass/virus.scss
@@ -7,7 +7,7 @@ body{
 .cuerpo{
     background: #383639;
     width: all;
-    height: 100vh;
+    height: auto;
     text-align: center;
     font-family: 'Archivo Black', sans-serif;
     color: blanchedalmond;
