--- a/css/virus.css
+++ b/css/virus.css
@@ -1,7 +1,7 @@
 @import url("https://fonts.googleapis.com/css?family=Anton&display=swap");
 @import url("https://fonts.googleapis.com/css?family=Archivo+Black&display=swap");
 body {
-  background-color: #383639;
+  background-color: #383639 !important;
 }
 
 .cuerpo {
