--- a/sass/virus.scss
+++ b/sass/virus.scss
@@ -2,7 +2,7 @@
 @import url('https://fonts.googleapis.com/css?family=Archivo+Black&display=swap');
 
 body{
-    background-color: #383639;
+    background-color: #383639 !important;
 }
 .cuerpo{
     background: #383639;
