--- a/sass/estilos.scss
+++ b/sass/estilos.scss
@@ -10,7 +10,7 @@ $letra-tres :'Jomolhari', serif;
    
 }
 body{
-    background-color: #383639;
+    background-color: #383639 !important;
 }
 .principal{
     background-color: #383639;
